--- a/Archon/login/index.html
+++ b/Archon/login/index.html
@@ -5,6 +5,11 @@
 	<title>AXISJ Control Tower</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="description" content="Description" />
+	
+    <meta property="og:image" content="http://dev.axisj.com/samples/_img/axisj_sns.png" /> 
+    <meta property="og:site_name" content="Axis of Javascript - axisj.com" /> 
+    <meta property="og:description" id="meta_description" content="Javascript UI Library based on JQuery" />
+
 	<!-- css block -->
 	<link rel="stylesheet" type="text/css" href="../html/common.css" />
 	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXJ.css" />
