--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0, minimum-scale=1" />
-    
+
     <meta property="og:image" content="http://dev.axisj.com/samples/_img/axisj_sns.png" /> 
     <meta property="og:site_name" content="Axis of Javascript - axisj.com" /> 
     <meta property="og:description" id="meta_description" content="Javascript UI Library based on JQuery" />
@@ -48,7 +48,7 @@
 						
 	<div style="">
 		<p style="padding-left:10px;">Axisj of javascript AXISJ - www.axisj.com</p>
-		<img src="_AXJ/axj_h.png" align="middle" alt="" width="200" />
+		<img src="http://dev.axisj.com/_AXJ/axj_h.png" align="middle" alt="" width="200" />
 	</div>
 	<div class="Hspace20"></div>
 	
