--- a/Archon/login/index.html
+++ b/Archon/login/index.html
@@ -12,24 +12,24 @@
 
 	<!-- css block -->
 	<link rel="stylesheet" type="text/css" href="../html/common.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXJ.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXInput.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXSelect.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXButton.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXGrid.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXSearch.css" >
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXJ.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXInput.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXSelect.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXButton.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXGrid.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXSearch.css" >
 	<link rel="stylesheet" type="text/css" href="../html/content.css" />
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- js block -->
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXJ.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXInput.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXSelect.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXGrid.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXSearch.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXModal.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXJ.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXInput.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXSelect.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXGrid.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXSearch.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXModal.js"></script>
 
 	<script type="text/javascript" src="../html/js/content.js"></script>
 
@@ -189,7 +189,7 @@
 											<div class="Hspace5"></div>
 											<input id="passwd" type="password" name="passwd" value="" placeholder="비밀번호를 입력하세요" class="AXInput AXInputPlaceHolder" style="width:190px;" />
 											<div class="Hspace5"></div>
-											<input type="submit" value="Login" class="AXButton W200 Green" />
+											<input type="submit" value="Login" class="AXButton W180 Green" />
 										</form>
 										<div class="Hspace20"></div>
 										<div style="font-size:10px;color:#717171;font-family:Consolas;">
