--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	
 	<title>AXISJ</title>
 	<!-- css block -->
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/samples/_css/default_common.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXJ.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_css/default_common.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/default/AXJ.css" />
 	<style type="text/css">
 		body{padding:10px;font-family:consolas;}
 		a{font-size:14px;padding:5px 10px;display:inline-block;font-family:consolas;text-decoration:none;}
@@ -31,8 +31,8 @@
 	<!-- css block -->
 	
 	<!-- js block -->
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXJ.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXJ.js"></script>
 	<script type="text/javascript">
 	var fnObj = {
 		pageStart: function(){
@@ -48,7 +48,7 @@
 						
 	<div style="">
 		<p style="padding-left:10px;">Axisj of javascript AXISJ - www.axisj.com</p>
-		<img src="http://dev.axisj.com/_AXJ/axj_h.png" align="middle" alt="" width="200" />
+		<img src="http://dev.axisj.com/samples/_img/axisj_sns.png" align="middle" alt="" />
 	</div>
 	<div class="Hspace20"></div>
 	
