--- a/Archon/content/editDonator.html
+++ b/Archon/content/editDonator.html
@@ -7,24 +7,24 @@
 	<meta name="description" content="Description" />
 	<!-- css block -->
 	<link rel="stylesheet" type="text/css" href="../html/common.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXJ_desktop.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXInput_desktop.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXSelect_desktop.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXButton_desktop.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXGrid.css" />
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/_AXJ/ui/default/AXSearch.css" >
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXJ.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXInput.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXSelect.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXButton.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXGrid.css" />
+	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXSearch.css" >
 	<link rel="stylesheet" type="text/css" href="../html/content.css" />
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- js block -->
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXJ.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXInput.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXSelect.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXGrid.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXSearch.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/_AXJ/lib/AXModal.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXJ.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXInput.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXSelect.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXGrid.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXSearch.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/lib/AXModal.js"></script>
 
 	<script type="text/javascript" src="../html/js/content.js"></script>
 
@@ -105,7 +105,7 @@
 
 				<div class="photoView" id="photoView"></div>
 
-				<table cellpadding="0" cellspacing="0" class="viewTBL">
+				<table cellpadding="0" cellspacing="0" class="AXFormTable">
 					<colgroup>
 						<col width="100" />
 						<col />
