--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<title>AXISJ</title>
 	<!-- css block -->
-	<link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/default/AXJ.css" />
+    <link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/arongi/AXJ.min.css" />
 	<style type="text/css">
 		body{padding:10px;font-family:consolas;}
 		a{font-size:14px;padding:5px 10px;display:inline-block;font-family:consolas;text-decoration:none;}
@@ -31,7 +31,7 @@
 	
 	<!-- js block -->
 	<script type="text/javascript" src="http://dev.axisj.com/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="http://dev.axisj.com/lib/AXJ.js"></script>
+	<script type="text/javascript" src="http://dev.axisj.com/dist/AXJ.min.js"></script>
 	<script type="text/javascript">
 	var fnObj = {
 		pageStart: function(){
@@ -53,12 +53,13 @@
 	
 	<ul>
 		<li><a href="Archon/index.html" target="_blank" class="sampleLink">Archon for admin</a></li>
+        <li><a href="Barracks/index.html" target="_blank" class="sampleLink">Barracks for admin</a></li>
 		<li class="line"></li>
 
 	</ul>	
 	
 	
-	<div style="padding:10px 5px;">2014-02-27 오후 1:25:02</div>
+	<div style="padding:10px 5px;">2014-05-19</div>
 	
 	<div class="Hspace20"></div>
 	
