--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 		ul{margin:0px 0px 0px 0px;padding:0px 0px 0px 0px;}
 		li{margin:0px 0px 0px 0px;display:block;}
 		li.line{
-			list-style:none;
 			display:block;
 			height:20px;
 		}
@@ -46,7 +45,7 @@
 <body>
 						
 	<div style="">
-		<p style="padding-left:10px;">Axisj of javascript AXISJ - www.axisj.com</p>
+		<p style="padding-left:10px;">AXU</p>
 		<img src="http://dev.axisj.com/samples/_img/axisj_sns.png" align="middle" alt="" />
 	</div>
 	<div class="Hspace20"></div>
@@ -59,7 +58,7 @@
 	</ul>	
 	
 	
-	<div style="padding:10px 5px;">2014-05-19</div>
+	<div style="padding:10px 5px;">2014-05-24</div>
 	
 	<div class="Hspace20"></div>
 	
