--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 		.bookmark{background:url(_AXJ/ui/icon/new.png) no-repeat 100% 0px;}
 		.new{background:url(_AXJ/ui/icon/new.png) no-repeat 100% 0px;}
 		.alpha{color:#666;}
-		ul{margin:0px 0px 0px 0px;padding:0px 0px 0px 0px;}
-		li{margin:0px 0px 0px 0px;display:block;}
 		li.line{
 			display:block;
 			height:20px;
@@ -45,20 +43,20 @@
 <body>
 						
 	<div style="">
-		<p style="padding-left:10px;">AXU</p>
-		<img src="http://dev.axisj.com/samples/_img/axisj_sns.png" align="middle" alt="" />
+        <img src="http://dev.axisj.com/samples/_img/axisj_sns.png" align="middle" alt="" />
+		<p style="padding-left:10px;font-size:20px;">AXU</p>
+
 	</div>
-	<div class="Hspace20"></div>
-	
 	<ul>
 		<li><a href="Archon/index.html" target="_blank" class="sampleLink">Archon for admin</a></li>
         <li><a href="Barracks/index.html" target="_blank" class="sampleLink">Barracks for admin</a></li>
 		<li class="line"></li>
 
-	</ul>	
-	
-	
-	<div style="padding:10px 5px;">2014-05-24</div>
+	</ul>
+
+
+    <div class="AXHspace50"></div>
+	<div style="padding:10px 5px;">Upadte : 2014-05-24</div>
 	
 	<div class="Hspace20"></div>
 	
