--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<ul>
 		<li><a href="Archon/index.html" target="_blank" class="sampleLink">Archon for admin</a></li>
         <li><a href="Barracks/index.html" target="_blank" class="sampleLink">Barracks for admin</a></li>
+        <li><a href="Barracks-cacao/index.html" target="_blank" class="sampleLink">Barracks for admin(cacao)</a></li>
 		<li class="line"></li>
 
 	</ul>
