함수구조변경

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 	</div>
 	<ul>
 		<li><a href="theme/Archon/index.html" target="_blank" class="sampleLink">Archon for admin</a></li>
-        <li><a href="Barracks/index.html" target="_blank" class="sampleLink">Barracks for admin</a></li>
-        <li><a href="Barracks-cacao/index.html" target="_blank" class="sampleLink">Barracks for admin(cacao)</a></li>
+        <li><a href="theme/Barracks/index.html" target="_blank" class="sampleLink">Barracks for admin</a></li>
+        <li><a href="theme/Barracks-cacao/index.html" target="_blank" class="sampleLink">Barracks for admin(cacao)</a></li>
 		<li class="line"></li>
 
 	</ul>
