--- a/theme/Barracks/admin/content.html
+++ b/theme/Barracks/admin/content.html
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="Axis of Javascript - axisj.com" />
     <meta property="og:description" id="meta_description" content="Javascript UI Library based on JQuery" />
 
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://cdn.axisj.com/axicon/axicon.min.css" />
     <link rel="stylesheet" type="text/css" href="http://dev.axisj.com/ui/cocker/AXJ.min.css" />
 
     <link rel="stylesheet" href="ui/cocker/admin.css" />
@@ -238,7 +238,6 @@
                     <div class="ax-unit">
                         <div class="ax-logo">
                             <a href="index.html"><img src="ui/cocker/images/logo.png" width="60" /></a>
-                            <a href="http://axu.axisj.com" target="_blank">axu.axisj.com</a>
                         </div>
                     </div>
                 </div>
@@ -249,7 +248,7 @@
                         <!-- 상단 top-down-menu 표시 영역 : s-->
                         <div id="ax-top-menu" class="ax-top-menu AXMenuBox"></div>
                         <!-- e : 상단 top-down-menu 표시 영역 -->
-                        <div class="mx-top-menu"><a id="mx-top-menu-handle" class="mx-menu-button"><i class="fa fa-th"></i></a></div>
+                        <div class="mx-top-menu"><a id="mx-top-menu-handle" class="mx-menu-button"><i class="axi axi-th"></i></a></div>
                     </div>
                 </div>
                 <div class="ax-col-4">
@@ -257,10 +256,10 @@
                         <ul class="ax-loginfo" id="ax-loginfo">
                             <li class="profile"><div class="photo"></div></li>
                             <li class="account"><a href="#ax">aliswel@aliswel.com</a></li>
-                            <li class="btns"><a href="#ax" class="AXButton" onclick="location.href = 'login.html';"><i class="fa fa-power-off"></i> 로그아웃</a></li>
-                            <!--li class="lang"><a href="#ax"><i class="fa fa-keyboard-o"></i> 한국어</a></li-->
+                            <li class="btns"><a href="#ax" class="AXButton" onclick="location.href = 'login.html';"><i class="axi axi-power-off"></i> 로그아웃</a></li>
+                            <!--li class="lang"><a href="#ax"><i class="axi axi-keyboard-o"></i> 한국어</a></li-->
                         </ul>
-                        <div class="mx-loginfo"><a id="mx-loginfo-handle" class="mx-menu-button"><i class="fa fa-bars"></i></a></div>
+                        <div class="mx-loginfo"><a id="mx-loginfo-handle" class="mx-menu-button"><i class="axi axi-bars"></i></a></div>
                     </div>
                 </div>
                 <div class="ax-clear"></div>
@@ -292,11 +291,11 @@
                                         <div class="ax-search" id="page-search-box"></div>
                                         <div class="ax-button-group">
                                             <div class="left">
-                                                <button type="button" class="AXButton Blue" id="ax-grid-btn-regist">등록</button>
-                                                <button type="button" class="AXButton" id="ax-grid-btn-remove">삭제</button>
+                                                <button type="button" class="AXButton Blue" id="ax-grid-btn-regist"><i class="axi axi-plus-circle"></i> 등록</button>
+                                                <button type="button" class="AXButton" id="ax-grid-btn-remove"><i class="axi axi-minus-circle"></i> 삭제</button>
                                             </div>
                                             <div class="right">
-                                                <button type="button" class="AXButton Blue" id="ax-search-btn-search">검색</button>
+                                                <button type="button" class="AXButton Blue" id="ax-search-btn-search"><i class="axi axi-ion-android-search"></i> 검색</button>
                                             </div>
                                             <div class="ax-clear"></div>
                                         </div>
@@ -320,7 +319,7 @@
     <!-- 좌측 퀵 메뉴 : s-->
     <div class="ax-aside">
         <div class="ax-layer ax-aside-menu-box">
-            <a class="ax-aside-menu"><i class="fa fa-angle-double-right fa-lg"></i><i class="fa fa-angle-double-left fa-lg"></i></a>
+            <a class="ax-aside-menu"><i class="axi axi-angle-double-right fa-lg"></i><i class="axi axi-angle-double-left fa-lg"></i></a>
         </div>
         <div class="ax-layer ax-aside-box">
             <div class="ax-unit">
@@ -339,18 +338,18 @@
 				<div class="ax-unit">
 					<ul class="ax-version">
 						<li>Powered by <a href="#ax">AXCMS</a></li>
-						<li><i class="fa fa-check-circle-o"></i> 현재버전 <a href="#ax">1.0.0</a></li>
-						<li><i class="fa fa-cloud-download"></i> 최신버전 <a href="#ax">1.0.0</a></li>
+						<li><i class="axi axi-check-circle-o"></i> 현재버전 <a href="#ax">1.0.0</a></li>
+						<li><i class="axi axi-cloud-download"></i> 최신버전 <a href="#ax">1.0.0</a></li>
 					</ul>					
 				</div>
 			</div>
 			<div class="ax-col-6">
 				<div class="ax-unit">
 					<ul class="ax-funcs">
-						<li><a href="#ax"><i class="fa fa-plane"></i> 딜리버리 재생성</a></li>
-						<li><a href="#ax"><i class="fa fa-trash-o"></i> 세션정리</a></li>
-						<li><a href="#ax"><i class="fa fa-info-circle"></i> 서버정보출력</a></li>
-						<li><a href="#ax"><i class="fa fa-share"></i> 버그리포트</a></li>						
+						<li><a href="#ax"><i class="axi axi-plane"></i> 딜리버리 재생성</a></li>
+						<li><a href="#ax"><i class="axi axi-trash-o"></i> 세션정리</a></li>
+						<li><a href="#ax"><i class="axi axi-info-circle"></i> 서버정보출력</a></li>
+						<li><a href="#ax"><i class="axi axi-share"></i> 버그리포트</a></li>
 					</ul>					
 				</div>
 			</div>
