--- a/index.html
+++ b/index.html
@@ -74,16 +74,8 @@
 			<h3>Archon</h3>
 			<img src="resource/images/archon.jpg" width="100%" />
 		</a>
-		<a href="theme/Barracks-cacao/index.html" target="_blank" class="theme-item">
-			<h3>Barracks(kakao)</h3>
-			<img src="resource/images/barracks-kakao.jpg" width="100%" />
-		</a>
 		<a href="theme/Barracks/index.html" target="_blank" class="theme-item">
-			<h3>Barracks(cocker)</h3>
-			<img src="resource/images/barracks-cocker.jpg" width="100%" />
-		</a>
-		<a href="theme/Barracks-2/index.html" target="_blank" class="theme-item">
-			<h3>Barracks(2)</h3>
+			<h3>Barracks</h3>
 			<img src="resource/images/barracks-2.jpg" width="100%" />
 		</a>
 	</div>
