--- a/theme/Barracks/admin/content-1.html
+++ b/theme/Barracks/admin/content-1.html
@@ -66,8 +66,8 @@
 		<div class="ax-wrap">
 			<div class="ax-layer ax-title">
 				<div class="ax-col-12 ax-content">
-					<h1>상품관리</h1>
-					<p class="desc">상품관리</>
+					<h1>주문/배송관리</h1>
+					<p class="desc">주문관리</p>
 				</div>
                 <div class="ax-clear"></div>
 			</div>
@@ -93,7 +93,16 @@
                                             <div class="ax-clear"></div>
                                         </div>
                                         <div class="ax-grid" id="page-grid-box"></div>
-
+                                        <div class="ax-button-group">
+                                            <div class="ax-align-center">
+                                                <button type="button" class="AXButtonLarge W50 Blue" id="ax-grid-btn-regist">
+                                                    <i class="axi axi-plus-circle"></i> 등록
+                                                </button>
+                                                <button type="button" class="AXButtonLarge W50" id="ax-grid-btn-remove">
+                                                    <i class="axi axi-minus-circle"></i>
+                                                    삭제</button>
+                                            </div>
+                                        </div>
 									</div>
 								</div>
 							</div>
@@ -152,7 +161,7 @@
     <!-- ax-footer : include -->
 </div>
 <script type="text/javascript">
-    var page_menu_id = "m02"; // admin.js > topMenu_data 에 정의된 id
+    var page_menu_id = "m03"; // admin.js > topMenu_data 에 정의된 id
 </script>
 <script type="text/javascript">
     var fnObj = {
@@ -201,6 +210,11 @@
                                 }
                             }
                         ]},
+                        {display:true, addClass:"gray", style:"", list:[
+                            {label:"브랜드", labelWidth:"100", type:"inputText", width:"150", key:"inputText2", addClass:"", valueBoxStyle:"", value:""},
+                            {label:"결제번호", labelWidth:"100", type:"inputText", width:"150", key:"inputText3", addClass:"secondItem", valueBoxStyle:"", value:""},
+                            {label:"주문번호", labelWidth:"100", type:"inputText", width:"150", key:"inputText3", addClass:"secondItem", valueBoxStyle:"", value:""}
+                        ]},
                         {display:true, addClass:"", style:"", list:[
                             {label:"상태", labelWidth:"100", type:"selectBox", width:"", key:"selectbox", addClass:"", valueBoxStyle:"", value:"close",
                                 options:[{optionValue:"all", optionText:"전체보기"}, {optionValue:"open", optionText:"공개"}, {optionValue:"close", optionText:"비공개"}],
@@ -213,7 +227,7 @@
                                     }
                                 }
                             },
-                            {label:"등록일자", labelWidth:"", type:"inputText", width:"70", key:"inputText1", addClass:"secondItem", valueBoxStyle:"", value:"",
+                            {label:"일자", labelWidth:"", type:"inputText", width:"70", key:"inputText1", addClass:"secondItem", valueBoxStyle:"", value:"",
                                 onChange: function(){}
                             },
                             {label:"", labelWidth:"", type:"inputText", width:"90", key:"inputText2", addClass:"secondItem", valueBoxStyle:"padding-left:0px;", value:"",
@@ -228,8 +242,8 @@
                             },
                         ]},
                         {display:true, addClass:"gray", style:"", list:[
-                            {label:"판매자명", labelWidth:"100", type:"inputText", width:"", key:"inputText2", addClass:"", valueBoxStyle:"", value:""},
-                            {label:"판매자 상품코드", labelWidth:"100", type:"inputText", width:"", key:"inputText3", addClass:"secondItem", valueBoxStyle:"", value:""}
+                            {label:"구매자 이메일", labelWidth:"100", type:"inputText", width:"200", key:"inputText2", addClass:"", valueBoxStyle:"", value:""},
+                            {label:"구매자 전화번", labelWidth:"100", type:"inputText", width:"", key:"inputText3", addClass:"secondItem", valueBoxStyle:"", value:""}
                         ]},
                         {display:false, addClass:"", style:"", list:[
                             {label:"마스터아이디", labelWidth:"100", type:"inputText", width:"", key:"inputText2", addClass:"", valueBoxStyle:"", value:""},
@@ -260,32 +274,30 @@
                     mediaQuery: {
                         mx:{min:0, max:767}, dx:{min:767}
                     },
+                    fixedColSeq: 5,
                     colGroup : [
-                        {key:"no", label:"번호", width:"40", align:"center", formatter:"money"},
-                        {key:"title", label:"제목", width:"200"},
-                        {key:"writer", label:"작성자", width:"90", align:"center"},
-                        {key:"regDate", label:"작성일", width:"90", align:"center"},
-                        {key:"desc", label:"비고", width:"*"}
+                        {key:"no", label:"", width:"30", align:"center", formatter:"checkbox"},
+                        {key:"odate", label:"주문일", width:"80", align:"center"},
+                        {key:"ddate", label:"배송지입력일", width:"80"},
+                        {key:"channel", label:"채널", width:"60", align:"center"},
+                        {key:"orderno", label:"주문번호", width:"100", align:"center"},
+                        {key:"productnm", label:"상품명", width:"150"},
+                        {key:"optionnm", label:"옵션명", width:"100"},
+                        {key:"modelnm", label:"모델명", width:"80"},
+                        {key:"productno", label:"상품번호", width:"60"},
+                        {key:"sellerproductno", label:"판매자 상품번호", width:"60"},
+                        {key:"brand", label:"브랜드", width:"60"},
+                        {key:"cost", label:"판매가", width:"70", formatter:"money", align:"right"},
+                        {key:"amount", label:"수량", width:"50", formatter:"money", align:"right"},
+                        {key:"ordercost", label:"주문금액", width:"70", formatter:"money", align:"right"},
+                        {key:"receiver", label:"수령인명", width:"60"},
+                        {key:"r_phone1", label:"수령인 연락처1", width:"80"},
+                        {key:"r_phone2", label:"수령인 연락처2", width:"80"},
+                        {key:"ostat", label:"주문상태", width:"60"},
+                        {key:"delevery_type", label:"배송비 형태", width:"70"},
+                        {key:"delevery_cost", label:"배송비", width:"60"},
+                        {key:"delevery_msg", label:"배송메세지", width:"100"}
                     ],
-                    view: {
-                        label:true,
-                        column: [ // col 은 4
-                            {key:"title", label:"제목", col:4, addClass:"underLine"},
-                            {key:"no", label:"번호", col:1},
-                            {key:"desc", label:"비고", col:3},
-                            {key:"writer", label:"작성자"},
-                            {key:"regDate", label:"작성일"},
-                            {key:"", label:"사용자연산", formatter: function(){
-                                return (this.item.no * 987).money();
-                            }}
-                        ],
-                        buttons: [
-                            {addClass:"handle", onclick:function(){
-                                toast.push("handle Click");
-                                trace(this.item);
-                            }}
-                        ]
-                    },
                     body : {
                         onclick: function(){
                             //toast.push(Object.toJSON({index:this.index, item:this.item}));
@@ -303,7 +315,7 @@
                 });
 
                 this.target.setList({
-                    ajaxUrl:"data/loadGrid.php", ajaxPars:"param1=1&param2=2", onLoad:function(){
+                    ajaxUrl:"data/loadGrid-1.php", ajaxPars:"param1=1&param2=2", onLoad:function(){
                         //trace(this);
                     }
                 });
