리포주소변경

--- a/theme/Barracks/admin/content-1.html
+++ b/theme/Barracks/admin/content-1.html
@@ -150,7 +150,7 @@
                 <div class="ax-unit">
                     <ul class="ax-funcs">
                         <li><a href="https://www.axisj.com" target="_blank"><i class="axi axi-axisj"></i> AXISJ.com</a></li>
-                        <li><a href="https://github.com/axisj-com" target="_blank"><i class="axi axi-github-square"></i> AXISJ gitHub</a></li>
+                        <li><a href="https://github.com/axisj" target="_blank"><i class="axi axi-github-square"></i> AXISJ gitHub</a></li>
                         <li><a href="https://www.facebook.com/axisj" target="_blank"><i class="axi axi-facebook-square"></i> Facebook</a></li>
                     </ul>
                 </div>
