--- a/theme/Barracks/admin/index.html
+++ b/theme/Barracks/admin/index.html
@@ -10,11 +10,11 @@
 	<link rel="shortcut icon" href="http://dev.axisj.com/ui/axisj.ico" type="image/x-icon" />
 	<link rel="icon" href="http://dev.axisj.com/ui/axisj.ico" type="image/x-icon" />
 
-	<link rel="stylesheet" type="text/css" href="http://cdn.axisj.com/axicon/axicon.min.css" />
-	<link rel="stylesheet" type="text/css" href="http://cdn.axisj.com/axisj/ui/kakao/AXJ.min.css" id="axu-theme-axisj" />
+	<link rel="stylesheet" type="text/css" href="http://cdno.axisj.com/axicon/axicon.min.css" />
+	<link rel="stylesheet" type="text/css" href="http://cdno.axisj.com/axisj/ui/kakao/AXJ.min.css" id="axu-theme-axisj" />
 
-	<script type="text/javascript" src="http://cdn.axisj.com/axisj/jquery/jquery.min.js"></script>
-	<script type="text/javascript" src="http://cdn.axisj.com/axisj/dist/AXJ.min.js"></script>
+	<script type="text/javascript" src="http://cdno.axisj.com/axisj/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="http://cdno.axisj.com/axisj/dist/AXJ.min.js"></script>
 
 	<link rel="stylesheet" href="ui/cacao/admin.css" id="axu-theme-admin" />
 	<link rel="stylesheet" href="ui/custom.css" />
