사이드 메뉴 활성화 처리 구문 추가

--- a/theme/Barracks/admin/index.html
+++ b/theme/Barracks/admin/index.html
@@ -295,7 +295,9 @@
 	</div>
 	<!-- ax-footer : include -->
 </div>
-
+<script type="text/javascript">
+	var page_menu_id = "m01"; // admin.js > topMenu_data 에 정의된 id
+</script>
 <script type="text/javascript">
 	var doughnutData = [
 		{
